# c-_chat

./: .gitignore  CMakeLists.txt  Readme.md  build.bat  run_server.bat  start_public_chat.bat  test_chat.bat
backend/src/: chat.cpp  chat.h  chat_manager.cpp  chat_manager.h  database.cpp  database.h  main.cpp  message.cpp  message.h  user.cpp  user.h  webserver.cpp  webserver.cpp.backup  webserver.h
backend/static/css/: style.css
backend/static/js/: app.js
backend/templates/: index.html
backend/tests/: tester.cpp
